--- a/BetterSpecialOrders/manifest.json
+++ b/BetterSpecialOrders/manifest.json
@@ -1,9 +1,9 @@
 {
   "Name": "Better Special Orders",
   "Author": "Xeru",
-  "Version": "0.0.1",
+  "Version": "1.0.1",
   "Description": "Adds customization to Special ORder and Qi Quest frequency.",
   "UniqueID": "xeru.BetterSpecialOrders",
   "EntryDll": "BetterSpecialOrders.dll",
-  "UpdateKeys": []
+  "UpdateKeys": [ "Nexus:24125" ]
 }
