--- a/BetterSpecialOrders/manifest.json
+++ b/BetterSpecialOrders/manifest.json
@@ -1,8 +1,8 @@
 {
   "Name": "Better Special Orders",
   "Author": "Xeru",
-  "Version": "1.0.1",
-  "Description": "Adds customization to Special ORder and Qi Quest frequency.",
+  "Version": "1.0.2",
+  "Description": "Adds customization to Special Orders and Qi Quest frequency.",
   "UniqueID": "xeru.BetterSpecialOrders",
   "EntryDll": "BetterSpecialOrders.dll",
   "UpdateKeys": [ "Nexus:24125" ]
