--- a/BetterSpecialOrders/BetterSpecialOrders.csproj
+++ b/BetterSpecialOrders/BetterSpecialOrders.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1" />
+      <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.0.1" />
     </ItemGroup>
 
 </Project>
